tests/ui/reborrow/coerce-shared-associated-type-field.stderr
error: implementing `CoerceShared` does not allow multiple lifetimes or fields to be coerced
  --> $DIR/coerce-shared-associated-type-field.rs:30:10
   |
LL | impl<'a> CoerceShared<MyRef<'a>> for MyMut<'a> {}
   |          ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

